--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE-edge">
+        <meta name="viewpoint" contents="width=device-width,initial-scale=1.0">
+        <title>Document</title>
+        <link rel="" href="style.css">
+    </head>
+    <body>
+        <table>
+            <thead>
+                <tr>
+                    <th>   SR   </th>
+                    <th>   DATE   </th>
+                    <th>   TASK   </th>
+                    <th>   DESCRIPTION   </th>
+                    <th>   LINK   </th>      
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>1</th>
+                    <th>25th May</th>
+                    <th>Daily Task</th>
+                    <th>Ensure to update daily</th>
+                    <th><a href="/">My Pages</a></th>
+                </tr>
+            </tbody>
+        </table>
+        <script src=""/site.js></script>
+    </body>
+</html>
