--- a/index.html
+++ b/index.html
@@ -1,33 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="viewpoint" contents="width=device-width,initial-scale=1.0">
-        <title>Document</title>
-        <link rel="" href="style.css">
-    </head>
-    <body>
-        <table>
-            <thead>
-                <tr>
-                    <th>   SR   </th>
-                    <th>   DATE   </th>
-                    <th>   TASK   </th>
-                    <th>   DESCRIPTION   </th>
-                    <th>   LINK   </th>      
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>1</th>
-                    <th>25th May</th>
-                    <th>Daily Task</th>
-                    <th>Ensure to update daily</th>
-                    <th><a href="/">My Pages</a></th>
-                </tr>
-            </tbody>
-        </table>
-        <script src=""/site.js></script>
-    </body>
+<html>
+<head>
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+</head>
+<body>
+
+<h2>DAILY TASKS</h2>
+
+<table>
+  <tr>
+    <th>S.NO</th>
+    <th>DATE</th>
+    <th>TASK</th>
+    <th>DESCRIPTION</th>
+    <th>LINK</th>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>25 may</td>
+    <td>GIThub</td>
+    <td>GIThub</td>
+    <td><a href="HTML"></a></td>
+
+  </tr>
+  
+  
+</table>
+
+</body>
 </html>
