--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ tr:nth-child(even) {
     <td>2</td>
     <td>26 may</td>
     <td>Mentorpic</td>
-    <td>I solved 1 problem </td>
+    <td>I have solved 2 problems </td>
     <td><a href="https://mentorpick.com/contest/Questions?tab=Questions&cid=1ff23360-aee2-4cac-b120-9e1f9df192b6&cslug=klu-y20-elite-cohort-1&courseId=707da31b-c631-42e7-b3fc-61b8e33cc62a">My Page</a></td>
 
   </tr>
