--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@ tr:nth-child(even) {
   <tr>
     <td>1</td>
     <td>25 may</td>
-    <td>GIThub</td>
-    <td>GIThub</td>
-    <td><a href="HTML"></a></td>
+    <td>GitHub</td>
+    <td>GitHub></a></td>
+    <td><a href="https://github.com/manaswini10101"</td>
 
   </tr>
   <tr>
     <td>2</td>
     <td>26 may</td>
-    <td>Mentorpic</td>
+    <td>Mentorpick</td>
     <td>I have solved 2 problems </td>
     <td><a href="https://mentorpick.com/contest/Questions?tab=Questions&cid=1ff23360-aee2-4cac-b120-9e1f9df192b6&cslug=klu-y20-elite-cohort-1&courseId=707da31b-c631-42e7-b3fc-61b8e33cc62a">My Page</a></td>
 
