--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ tr:nth-child(even) {
     <td>Solved:
       <br>Case Insensitive Palindrome<br>
       <br>Check Anagrams<br>
+      <br>Two Sums<br>
   </td>
     <td><a href="https://mentorpick.com/contest/Questions?tab=Questions&cid=1ff23360-aee2-4cac-b120-9e1f9df192b6&cslug=klu-y20-elite-cohort-1&courseId=707da31b-c631-42e7-b3fc-61b8e33cc62a">My Page</a></td>
 
