--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@ tr:nth-child(even) {
   <tr>
     <td>2</td>
     <td>26 may</td>
-    <td>Complete atleast 3 problems</td>
-    <td>
+    <td>Complete atleast 3 problems
       <br>Case Insensitive Palindrome<br>
       <br>Check Anagrams<br>
       <br>Two Sum<br>
