--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@ tr:nth-child(even) {
     <td><a href="https://mentorpick.com/contest/Questions?tab=Questions&cid=1ff23360-aee2-4cac-b120-9e1f9df192b6&cslug=klu-y20-elite-cohort-1&courseId=707da31b-c631-42e7-b3fc-61b8e33cc62a">My Page</a></td>
 
   </tr>
+  <tr>
+    <td>3</td>
+    <td>27-MAY</td>
+    <td>Daily Task</td>
+    <td>Solved:
+        <br>Balancing Parantheses<br> 
+    </td>
+    <td><a href="https://mentorpick.com/contest/Questions?tab=Questions&cid=1ff23360-aee2-4cac-b120-9e1f9df192b6&cslug=klu-y20-elite-cohort-1&courseId=707da31b-c631-42e7-b3fc-61b8e33cc62a">My Page</a></td>
+
+  </tr>
   
   
 </table>
